# OptimaChain

./: .env  .gitignore  README.en.md  README.ko.md  README.md  README.zh-CN.md  blockchain-visual.js  community.html  features.html  icons.js  index.html  netlify.toml  package-lock.json  package.json  script.js  server.js  start-backend.sh  technology.html  testnet.html  validator-guide.md
backend/: .env  README.md  package-lock.json  package.json
contracts/: MultiSigWallet.sol  OptimaStaking.sol  OptimaTokenBridge.sol  README.md
core/: Cargo.toml  README.md  validator.js
core/src/: lib.rs  main.rs
core/src/consensus/: apos.rs  block_production.rs  finality.rs  mod.rs  validator.rs
core/src/network/: discovery.rs  message.rs  mod.rs  protocol.rs  transport.rs
core/src/sharding/: allocation.rs  cross_shard.rs  mod.rs  resharding.rs  shard.rs
core/src/storage/: batch.rs  database.rs  iterator.rs  keys.rs  mod.rs
core/src/types/: account.rs  block.rs  mod.rs  state.rs  transaction.rs
core/src/utils/: config.rs  crypto.rs  errors.rs  logging.rs  mod.rs
core/src/wasm/: contract.rs  error.rs  gas.rs  host.rs  mod.rs  runtime.rs
css/: header-footer.css  modern-design.css  styles.css
deploy/: README.md  deploy.js
docker/: Dockerfile  README.md  api.Dockerfile  docker-compose.yml
docs/: OptimaChain-whitepaper.md
frontend/: index.html  package.json
js/: apos-visual.js  language-switcher.js  sharding-visual.js
optimachain-ui/: CODEBASE_QUALITY_REPORT.md  README.md  browserconfig.xml  convert-images.js  index.html  jest-puppeteer.config.js  login.html  (+9 more)
(+158 files in other folders)
